# template-cpp20-agnostic-build-ci-cd

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  conanfile.py  create_script_venv.py  meson.build
.github/ISSUE_TEMPLATE/: bug.md  feature.md  maintenance.md
conf/build-system/: compiler-reqs.ini
conf/build-system/machine/: pre-global.ini
conf/build-system/meson/machine/: post-global.ini  pre-global.ini
conf/meson/script/: print-setup-dir-args.sh
conf/script/: requirements.txt
conf/script/build-system/compiler/: cli_fetch_msvc_version.py  compiler_reqs.py  compiler_version.py  fetch_compiler_version.py  fetch_gnu_compiler_version.py  fetch_msvc_version_impl.py
conf/script/build-system/meson/: setup.py
conf/script/build_system/compiler/: __init__.py  compiler.py  compiler_family.py  family.py  version.py
conf/script/env/: pyvenv.cfg
conf/script/env/Scripts/: activate
conf/script/src/: .gitignore
conf/script/src/cli/: arg.py  arg_parsing.py  try_cmd.py
conf/script/src/ext/: auto_print.py  cmd_integrity.py  more_path.py  more_typing.py
conf/script/src/file_structure/: __init__.py  _type_alias.py  build_dir.py  build_system.py  cmd_cli.py  conf_dir.py  file_system.py  fs_build_dir.py  (+6 more)
conf/script/utils/: cli.py  cmd_integrity.py
meson/machine/: global.ini  post-global.ini  pre-global.ini
meson/machine/native/: native.ini
meson/script/: get_script_dir.sh  lib  meson-setup.sh  shell_header.sh  test-shell.sh
script/lib/: get-meson-project-dir.sh  get-script-dir.sh  shell-header.sh  vars-meson-structure.sh
src/: Main.cpp
(+402 files in other folders)
